# cardano-node-clients

./: .gitignore  404.html  CHANGELOG.md  README.md  cabal.project  cardano-node-clients.cabal  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  devnet-image.yml
architecture/: index.html
devnet/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  index.md
docs/modules/: balance.md  n2c.md  provider.md  submitter.md
e2e-test/Cardano/Node/Client/E2E/: Devnet.hs  Setup.hs
lib/Cardano/Node/Client/: Balance.hs  Provider.hs  Submitter.hs  Types.hs
lib/Cardano/Node/Client/N2C/: Codecs.hs  Connection.hs  LocalStateQuery.hs  LocalTxSubmission.hs  Provider.hs  Submitter.hs  Types.hs
modules/balance/: index.html
modules/n2c/: index.html
modules/provider/: index.html
modules/submitter/: index.html
search/: search_index.json
test/: main.hs
test/Cardano/Node/Client/E2E/: ProviderSpec.hs
